--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col-lg-9", style = "margin-top: 70px;">
 		<h1 style ="padding-bottom: 10px;" ><strong>REVIUS</strong></h1>
-		<p style ="font-size: 20px;" >美容や健康に気を使っている人や何かをきっかけに<br>美容を気にし始めた人に向けてこのサイトを作りました。</p>
+		<p style ="font-size: 20px;" >美容に気を使っている人や何かをきっかけに<br>美容を気にし始めた人に向けてこのサイトを作りました。</p>
 		<p style ="font-size: 20px;"><strong>Together To The Heights</strong> :お客様と一緒に高みを目指していく<br>あなたにあった化粧品と出会えるように日々このサイトは変化し高みを目指し続けて行きます。</p>
 	</div>
 </div>
